--- a/public/index.html
+++ b/public/index.html
@@ -8,39 +8,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+<link rel="stylesheet" href="./css/stilo.css">
     <title>instabot</title>
     <style>
-        .card-login {
-            padding: 5px 0 0 0;
-            width: 350px;
-            margin: 0 auto;
-        }
-
-        /* Barra de navegação
------------------------------*/
-
-        header {
-            padding: 40px 0px;
-            background: rgb(83, 122, 182);
-        }
-
-        h1 {
-            font-weight: 900;
-            letter-spacing: -0.05em;
-            margin-bottom: 30px;
-            color: white;
-            margin: auto 300px;
-        }
-
-        h3 {
-            color: rgb(83, 122, 182);
-            font-weight: 900;
-        }
+       
     </style>
 </head>
 
-<body style="background-color: aliceblue;">
+<body >
     <header class="mb-4">
         <!-- inicio Cabecalho -->
         <h1 class="text-lg-right">InstaBot</h1>
@@ -52,7 +27,7 @@
         <div class="row ">
             <div class="card-login  mt-1">
                 <div class="card ">
-                    <div id="login" class="card-header" style="background-color: rgb(83, 122, 182);">
+                    <div id="login" class="card-header" >
                         Login
                     </div>
                     <div class="card-body">
@@ -109,7 +84,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js "></script>
+    <script src="./scripts/script.js "></script>
     <script src=" https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js "
         integrity=" sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p "
         crossorigin=" anonymous "></script>
