--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
                                 aria-describedby="tempo em minutos" placeholder="30 minutos">
                         </div>
                         <button onclick="newUser()" type=" submit" class=" btn btn-primary mt-2"
-                            value="">Entrar</button>
+                            >Entrar</button>
 
 <div id="res">
 
