--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,7 @@
                             <input type="number" name="pausa" class="form-control" id="userPausaComent"
                                 aria-describedby="tempo em minutos" placeholder="30 minutos">
                         </div>
-                        <button onclick="newUser()" type=" submit" class=" btn btn-primary mt-2"
-                            >Entrar</button>
+                        <button onclick="newUser()" type=" submit" class=" btn btn-primary mt-2">Entrar</button>
 
 <div id="res">
 
