--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
                             <input type="number" name="pausa" class="form-control" id="userPausaComent"
                                 aria-describedby="tempo em minutos" placeholder="30 minutos">
                         </div>
-                        <button onclick="newUser()" type="submit" class=" btn  mt-2">Entrar</button>
+                        <button onclick="novoUsuario()" type="submit" class=" btn  mt-2">Entrar</button>
 
                         <div id="res">
 
