--- a/public/index.html
+++ b/public/index.html
@@ -19,34 +19,35 @@
     <header class="">
         <!-- inicio Cabecalho -->
         <div class="imagem">
-            <img src="./imagens/instabot_log.png "  >
+            <img src="./imagens/instabot_log.png ">
         </div>
-         
+
     </header>
     <div class="container-fluid m-4 ">
-       
+
 
         <div class="row ">
             <div class="card-login  mt-1">
                 <!-- inicio explição-->
                 <div class="card ">
 
-                    <div id="login" class="card-header">
+                    <div id="textos" class="card-header">
                         <h4>Como Usar o app</h4>
 
                     </div>
-                    <div id="textos" class="card-body">
+                    <div  class="card-body">
 
 
                         <div>
                             <div class="texto">
                                 <p>
                                 <h6>Instabot é um app de comentários automáticos
-                                    no instagram,ele abre uma nova página Obs(não interagir com essa nova página), para ultiliza-lo é só seguir o passo a passo:</h6>
+                                    no instagram,ele abre uma nova página Obs(não interagir com essa nova página), para
+                                    ultiliza-lo é só seguir o passo a passo:</h6>
                                 </p>
                             </div>
                             <div class="texto">
-                                <p>Coloque email senha e url  (endereço da página que deseja comentar) .</p>
+                                <p>Coloque email senha e url (endereço da página que deseja comentar) .</p>
                             </div>
                             <div class="texto">
                                 <p>Escreva o comentário que deseja e clique no
@@ -74,7 +75,8 @@
                                 comentários, depois desse tempo ele volta a comentar novamente .</p>
                             </div>
                             <div class="texto">
-                                <p>Ele ficará repetinho o processo até que seja fechado a página ou os comentários sejam bloqueados .
+                                <p>Ele ficará repetinho o processo até que seja fechado a página ou os comentários sejam
+                                    bloqueados .
                                 </p>
                             </div>
                             <div class="texto">
@@ -91,17 +93,17 @@
             </div>
             <div class="card-login  mt-1">
 
-                <div class="card ">
+                <div id="formulario" class="card ">
 
                     <div id="login" class="card-header">
-                     <h3>Login</h3>   
+                        <h3>Login</h3>
                     </div>
                     <div class="card-body">
 
                         <div class="form-group">
                             <label for="userEmail" class=" form-label  ">Email</label>
                             <input type="email" name="email" class="form-control" id="userEmail"
-                                aria-describedby="emailHelp" placeholder="@Email.com">
+                                aria-describedby="emailHelp" placeholder="@Email , nome do usuario ou telefone">
                         </div>
                         <div class="form-group">
                             <label for="userSenha" class=" form-label">Senha</label>
@@ -140,7 +142,7 @@
                             <input type="number" name="pausa" class="form-control" id="userPausaComent"
                                 aria-describedby="tempo em minutos" placeholder="30 minutos">
                         </div>
-                        <button onclick="novoUsuario()" type="submit" class=" btn  mt-2">Entrar</button>
+                        <button onclick="newUser()" type=" submit" class=" btn  mt-2" value="">Entrar</button>
 
                         <div id="res">
 
@@ -154,7 +156,7 @@
 
                 <div class="card ">
 
-                    <div id="login" class="card-header">
+                    <div id="exemplos" class="card-header">
                         <h4>Exemplos De Comentários</h4>
 
                     </div>
